--- a/sampleWebApp/pom.xml
+++ b/sampleWebApp/pom.xml
@@ -99,7 +99,20 @@ Also show cases the 'Simple Logging Framework - slf4j'.</description>
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		</dependencies>
+			<dependency>
+			 <groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			 <version>3.X</version>
+		</dependency>
+	
+		<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-chrome-driver</artifactId>
+			  <version>3.X</version>
+		</dependency>
+	
+	
 
 
 </project>
